# rust-fullstack

./: Cargo.toml  README.md
src/: main.rs
